--- a/trunk/sgo/web/WEB-INF/web.xml
+++ b/trunk/sgo/web/WEB-INF/web.xml
@@ -9,4 +9,28 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <filter>
+	   <filter-name>vraptor</filter-name>
+	   <filter-class>br.com.caelum.vraptor.VRaptor</filter-class>
+	 </filter>
+	 <filter-mapping>
+	   <filter-name>vraptor</filter-name>
+	   <url-pattern>/*</url-pattern>
+	   <dispatcher>FORWARD</dispatcher>
+	   <dispatcher>REQUEST</dispatcher>
+	 </filter-mapping>
+
+	<context-param>   
+    	<param-name>br.com.caelum.vraptor.encoding</param-name>   
+    	<param-value>UTF-8</param-value>   
+	</context-param>  
+	
+	<context-param>   
+		<description>Limite maximo em bytes</description>   
+		<param-name>br.com.caelum.vraptor.interceptor.multipart.UPLOAD_SIZE_LIMIT</param-name>   
+		<param-value>10000000</param-value>   
+	</context-param> 
+  
+  
 </web-app>
