--- a/trunk/sgo/.classpath
+++ b/trunk/sgo/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/vraptor-3.3.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/restfulie-1.0.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
